package behavior.flies

interface FlyBehavior {
    fun fly()

}
