package behavior.flies

class FlyWithWings : FlyBehavior {
    override fun fly() {
        println("I'm flying")
    }
}