package behavior.quacks

class Quack : QuackBehavior {
    override fun quack() {
        println("Quack")
    }
}