package behavior.quacks

interface QuackBehavior {
    fun quack()

}
