package behavior.quacks

class Squeak : QuackBehavior {
    override fun quack() {
        println("Squeak")
    }
}